(fix) Updated queue list tables broken styles and added service views (#315)

--- a/packages/esm-outpatient-app/src/queue-patient-linelists/queue-linelist-base-table.scss
+++ b/packages/esm-outpatient-app/src/queue-patient-linelists/queue-linelist-base-table.scss
@@ -38,6 +38,7 @@
 .filterTile {
   border-bottom: 1px solid $text-03;
   margin-bottom: spacing.$spacing-04;
+  background-color: $ui-01;
 }
 
 .actionsBtn {
